# hh-inspect

./: .gitignore  LICENSE  README.md  config.yaml  config_data_analyst.yaml  config_python_devel.yaml  make.bat  mypy.ini  pyproject.toml
src/hh_inspect/: __main__.py  analyzer.py  config.json  config.yaml  console_printer.py  data_collector.py  html_output.py  main.py  options.py  parsers.py  settings.py  utils.py  vacancy.py  vacancy_output.py
templates/: style.css  template.html
tests/: example_vacancy.json  test.json  test_analyzer.py  test_convert.py  test_data_collector.py  test_settings.py  test_utils.py
