[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hh-inspect"
version = "0.1.0"
description = "A FastAPI application for automating the collection and analysis of job postings from the Headhunter website (hh.ru)."
readme = "README.md"
authors = [
    { name = "Peter Huggy", email = "peter.huggy@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.3.0",
    "pyaml>=25.7.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.0",
    "seaborn>=0.13.0",
    "tqdm>=4.67.0",
]

[project.scripts]
app = "hh_inspect.main:main"

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.250308",
    "pyright>=1.1.405",
    "pytest>=8.4.0",
    "ruff>=0.13.0",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.0.20250515",
    "types-seaborn>=0.13.2.20250516",
    "types-tqdm>=4.67.0.20250516",
]

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # dynamically typed expressions (typing.Any) are disallowed in `{}`
    "COM812",  # trailing comma missing
    "D1",  # missing docstring in ...
    "D203",  # 1 blank line required before class docstring
    "D213",  # multi-line docstring summary should start at the second line
    "DTZ001",  # the use of `datetime.datetime()` without `tzinfo` argument is not allowed
    "DTZ011",  # `datetime.date.today()` used
    "FBT",  # boolean type position ...
    "G004",  # using of f-strings to format logging messages
    "PTH123",  # `open()` should be replaced by `Path.open()`
    "RUF002",  # docstring contains ambiguous `{}`
    "RUF003",  # comment contains ambiguous `{}`
    "TRY003"  # avoid specifying long messages outside the exception class
]
# exclude = ["src/hh_inspect/analyzer.py"]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ARG001",  # unused function argument `{}`
    "PLR2004",  # magic value used in comparison, consider replacing {} with constant variable
    "RUF001",  # string contains ambiguous `{}`
    "S101",  # use of `assert` detected 
    "S311"  # standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
exclude = [
    "src/unused",
    ".venv"
]

[tool.pytest.ini_options]
addopts = [
    "--color=no",
    "--import-mode=importlib", # both modes work
]
pythonpath = "src"
python_files = "test*.py"
testpaths = [
    "tests",
]
